--- a/public/styles.css
+++ b/public/styles.css
@@ -6,7 +6,7 @@ body {
 .gridContainer {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: 200px auto;
+    grid-template-rows: 200px 200px;
     gap: 10px;
     min-height: 100vh;
     padding: 10px;
