--- a/views/catIndex.ejs
+++ b/views/catIndex.ejs
@@ -17,7 +17,7 @@
         <div class = "grid-item bg-cyan-300 outline-inherit border-8 border-black" id="catCont">
           <a  class="text-center" id = "catName" href="/categories/products?name=<%= cat.name %>"><div> Name: <%= cat.name %> </div></a>
 
-          <button class = "rounded-full text-white w-20 bg-gray-400 border-8 border-black" id = "open"><a target="_blank" href="/categories/edit/<%= cat.id %>">Open</a></button>
+          <button class = "rounded-full text-white w-20 bg-gray-400 border-8 border-black" id = "open"><a target="_blank" href="/categories/edit/<%= cat.id %>/edit">Open</a></button>
            <button class = " w-20 rounded-full bg-gray-400 text-white border-8 border-black" id = "delete"><a href="/categories/delete/<%= cat.id %>">Delete</a></button>
         </div>
 
