--- a/views/productIndex.ejs
+++ b/views/productIndex.ejs
@@ -11,7 +11,7 @@
    <a href="./products/new">Click here to add a Product</a>
    <a href="./categories/new">Click here to add a Category</a>
    <% products.forEach(function(product){ %>
-        <div id="prodCont">
+        <div class ="bg-cyan-300 outline-inherit border-8 border-black" id="prodCont">
           <div> Name: <%= product.name %> </div>
           <div> Price: <%= product.price %> </div>
           <div> Brand: <%= product.brand %> </div>
